--- a/onserver/index.html
+++ b/onserver/index.html
@@ -59,6 +59,7 @@
 	xhttp.onreadystatechange = function() {
 		if (this.readyState == 4 && this.status == 200) {
 			document.getElementById("response").innerHTML = this.responseText;
+alert(this.responseText);
 		}
   	};
 
@@ -68,19 +69,19 @@
 		var v_longitude = document.getElementById('longitude').value;
 		var vdata = v_name + "," + v_latitude + "," + v_longitude;
 		var vdata = "venue=" + v_name + "&" + "latitude=" + v_latitude + "&" + "longitude=" + v_longitude;
-console.log(vdata);
-		//if ( v_name== "" || v_latitude == "" || v_longitude == "" ){
-		//	alert("Please fill out all fields correctly.");
-		//} else {
+//console.log(vdata);
+		if ( v_name== "" || v_latitude == "" || v_longitude == "" ){
+			alert("Please fill out all fields correctly.");
+		} else {
 			//create marker and add venue to SQL database
 			L.marker([v_latitude, v_longitude], { title: v_name }).addTo(mymap);
 			mymap.setView([v_latitude, v_longitude], 10);
 			//Make ajax request.
-			xhttp.open("POST", "http://qrcodes4bitcoin.com:80", true);
+			xhttp.open("POST", "http://qrcodes4bitcoin.com/server:12001", true);
 			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 			xhttp.send(vdata);
 			
-	//	}/
+		}
 	}
 
 	//Right click code taken from Leaflet Quickstart Tutorial.
