Verified test shows data as expected.

--- a/onserver/index.html
+++ b/onserver/index.html
@@ -82,7 +82,7 @@
 			if ( directive === "load" ) {
 				//for each object load marker onto map
 				for( var i = 0; i < table_data_array.length; i++){
-					console.log("i=" + i + ": " + table_data_array[i]);
+					console.log("i=" + i + ": " + JSON.stringify(table_data_array[i]));
 				}
 				
 			}
