--- a/onserver/index.html
+++ b/onserver/index.html
@@ -89,7 +89,8 @@ var marker_array = [];
 					//Create marker and add to map. 
 					marker_array[i] = L.marker([table_arr[i].latitude, table_arr[i].longitude], { title: table_arr[i].name }).addTo(mymap);
 					//Bind popup on click to newly creaated marker.
-					marker_array[i].bindPopup(JSON.stringify(table_arr[i]));
+					//marker_array[i].bindPopup(JSON.stringify(table_arr[i]));
+					marker_array[i].bindPopup('<div><p>name: '+table_arr[i].name+'</p><p>lat: '+table_arr[i].latitude+'</p><p>long: '+table_arr[i].longitude+'</p>');
 				}
 				
 			}
