Add location works from within marker popup.

--- a/onserver/index.html
+++ b/onserver/index.html
@@ -138,7 +138,7 @@ var marker_array = [];
 	function create_marker(lat, lng){
 		var new_marker = L.marker( [lat, lng]).addTo(mymap);
 		//Bind popup on click to newly creaated marker.
-		new_marker.bindPopup('<div>name: <input type="text" id="venue_popup"><br>lat: <input type="text" id="latitude"><br>long: <input type="text" id="longitude">').openPopup();
+		new_marker.bindPopup('<div>name: <input type="text" id="name"><br>lat: <input type="text" id="latitude"><br>long: <input type="text" id="longitude"><br><button onclick="create_venue()">Add Location</button>').openPopup();
 	}
 
 	//Right click code taken from Leaflet Quickstart Tutorial.
