First working modal over the map.

--- a/onserver/index.html
+++ b/onserver/index.html
@@ -13,10 +13,60 @@
 		width: 100vw;
 	}
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 100000; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}`
+
 </style></head>
 <body>
 <!--HTML goes here.-->
 <div id="mapid"></div>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
 
 <div id="inputs_add">
 	<label>Venue Name</label>
@@ -143,6 +193,7 @@ var marker_array = [];
 
 	function create_modal(){
 		console.log("create_overlay entered");
+		modal.style.display = "block";
 	}
 
 	//Right click code taken from Leaflet Quickstart Tutorial.
@@ -160,8 +211,28 @@ var marker_array = [];
 	//Right mouse click fires 'contextmenu' type event. On this event run the handler function.
 	mymap.on('contextmenu', onRightClick);
 
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+
+
 </script>
 </body>
+
 
 
 
