--- a/onserver/index.html
+++ b/onserver/index.html
@@ -80,6 +80,7 @@
 <div id="map-wrapper">
 	<div id="mapid"></div>
 	<div id="button-wrapper">
+		<!-- Idea for this taken from https://stackoverflow.com/questions/17942889/how-to-put-buttons-on-the-leaflet-map -->
 		<button id="map_button" onclick="create_modal()">Create New Little Locker</button>
 	 </div> 
 </div>
