Sanitization seems to be working. Moving changes to main node file.

--- a/onserver/index.html
+++ b/onserver/index.html
@@ -170,7 +170,7 @@ var marker_array = [];
 	}).addTo(minimap);
 	//Callback function from above
 	function onMapLoad(){
-		alert('minimap loaded');
+		//alert('minimap loaded');
 		setTimeout(function() {
     		minimap.invalidateSize();
   		}, 10);
